Lowering z-index on comments-action to be inline with latest z-index changes Fixes #1104
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/system@4110 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -305,7 +305,7 @@ a img {
 
 #page .comments-action.dropbutton{
 	right:170px;
-	z-index: 99;
+	z-index: 90;
 }
 #page .comments-action.dropbutton.alert {
 /*	background: #FF4500; */
